[package]
name = "chrome_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
tokio-tungstenite = "0.18.0"
tokio = {version = "1", features = ["full"] }
url = "2.3.1"
futures-util = "0.3.25"
futures-channel = "0.3.25"
json = "0.12.4"
