[package]
name = "chrome_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
mockall = "0.11.3"

[dependencies]
log = "0.4"
url = "2.3.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"]}
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"]}
tungstenite = "0.18.0"
